Unencodable strings and empty strings are decompressed incorrectly in block interleaved API

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0
    • QI 2024-04-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the block interleaved decompressor, unencodable strings and empty strings will both be stored as 0 in the lastEncodedValue. This results in an error when trying to decompress strings since we can't tell if we should be decompressing an empty string or an unencodable string. 

            Assignee:
            Gil Alon
            Reporter:
            Gil Alon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: