SERVER-89731 Store none as the lastEncodedValue for unencodable values in the block interleaved decompressor (#21446)

GitOrigin-RevId: 832d396034a81cdb0590ffde75c0f89d123e315b